force-app/main/default/objects/Points_Transaction__c/Points_Transaction__c.object-meta.xml
<CustomObject>
    <description>Points Transaction Logging table</description>
    <label>Points Transaction</label>
    <nameField>
        <label>Points Transaction Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Points Transactions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>