force-app/main/default/objects/Points_Transaction__c/fields/Activity_Date__c.field-meta.xml
<CustomField>
    <fullName>Activity_Date__c</fullName>
    <description>This corresponds to the customer reciept date as chosen by the TIC</description>
    <label>Activity Date</label>
    <type>Date</type>
</CustomField>