force-app/main/default/objects/Points_Transaction__c/fields/Authorise_Code__c.field-meta.xml
<CustomField>
    <fullName>Authorise_Code__c</fullName>
    <description>Code and Basic description</description>
    <label>Authorise Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>