force-app/main/default/objects/Points_Transaction__c/fields/Customer_Card_Number__c.field-meta.xml
<CustomField>
    <fullName>Customer_Card_Number__c</fullName>
    <description>The Points Card Number</description>
    <label>Customer Card Number</label>
    <length>20</length>
    <required>true</required>
    <type>Text</type>
</CustomField>