force-app/main/default/objects/Points_Transaction__c/fields/Points_Value__c.field-meta.xml
<CustomField>
    <fullName>Points_Value__c</fullName>
    <description>Value of Points</description>
    <label>Points Value</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>