force-app/main/default/objects/Points_Transaction__c/fields/Promo_Type__c.field-meta.xml
<CustomField>
    <fullName>Promo_Type__c</fullName>
    <label>Promo Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Base</fullName>
                <default>true</default>
                <label>Base</label>
            </value>
            <value>
                <fullName>Bonus</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>