force-app/main/default/objects/Points_Transaction__c/fields/Provider_Id__c.field-meta.xml
<CustomField>
    <fullName>Provider_Id__c</fullName>
    <description>Relation to corresponding Provider</description>
    <label>Provider Id</label>
    <length>30</length>
    <type>Text</type>
</CustomField>