force-app/main/default/objects/Points_Transaction__c/fields/Transact_Quantity__c.field-meta.xml
<CustomField>
    <fullName>Transact_Quantity__c</fullName>
    <label>Transact Quantity</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>