force-app/main/default/objects/Points_Transaction__c/fields/Transaction_Reference__c.field-meta.xml
<CustomField>
    <fullName>Transaction_Reference__c</fullName>
    <description>Unique transaction reference</description>
    <label>Transaction Reference</label>
    <length>20</length>
    <required>true</required>
    <type>Text</type>
</CustomField>