force-app/main/default/objects/Points_Transaction__c/fields/Transaction_Status__c.field-meta.xml
<CustomField>
    <fullName>Transaction_Status__c</fullName>
    <description>Last Stage in Processing Transaction</description>
    <label>Transaction Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>CUSTOMER VERIFIED</fullName>
            </value>
            <value>
                <fullName>CUSTOMER VERIFY FAILED</fullName>
            </value>
            <value>
                <fullName>CREDITING COMPLETE</fullName>
            </value>
            <value>
                <fullName>CREDITING FAILED</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>