force-app/main/default/objects/Points_Transaction__c/fields/Transaction_Value__c.field-meta.xml
<CustomField>
    <fullName>Transaction_Value__c</fullName>
    <description>The monetary value of the transaction</description>
    <label>Transaction Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>