force-app/main/default/objects/Points_Transaction__c/fields/Village_Code__c.field-meta.xml
<CustomField>
    <fullName>Village_Code__c</fullName>
    <label>Village_Code</label>
    <length>5</length>
    <type>Text</type>
</CustomField>