force-app/main/default/objects/Points_Transaction__c/fields/VR_Transaction_Reference__c.field-meta.xml
<CustomField>
    <fullName>VR_Transaction_Reference__c</fullName>
    <label>VR Transaction Reference</label>
    <length>20</length>
    <type>Text</type>
</CustomField>