force-app/main/default/objects/Points_Transaction__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Transaction_Date__c</columns>
    <columns>Transaction_Type__c</columns>
    <columns>Points_Value__c</columns>
    <columns>Promo_Type__c</columns>
    <columns>Village_Code__c</columns>
    <columns>VR_Transaction_Reference__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>CREATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>